new job location

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                       <div class="col-sm-8">
                         <h2 class="w-title">Técnico de sistemas</h2>
                         <div class="w-more">
-                          <span class="w-ctegory">Savvy Data Systems</span> / <span class="w-date">Jun. 2022 - Actualmente</span>
+                          <span class="w-ctegory">Savvy Data Systems</span> / <span class="w-date">Jun. 2022 - Actualmente</span> / <span class="w-location">Donostia</span>
                         </div>
                       </div>
                       <div class="col-sm-4">
@@ -206,7 +206,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico de sistemas</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Megabi Soluciones</span> / <span class="w-date">Dic. 2020 - Jun. 2022</span>
+                        <span class="w-ctegory">Megabi Soluciones</span> / <span class="w-date">Dic. 2020 - Jun. 2022</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
