--- a/eus/index.html
+++ b/eus/index.html
@@ -46,9 +46,6 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="https://inakimendez.com">Home</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">Sobre mí</a>
           </li>
           <li class="nav-item">
@@ -59,6 +56,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll active" href="https://inakimendez.com">ES</a>
           </li>
         </ul>
       </div>
