--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a class="nav-link js-scroll" href="#contact">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="https://inakimendez.com/eus">EUS</a>
+            <a class="nav-link js-scroll active" href="https://inakimendez.com/eus"><b>ES</b>|EUS</a>
           </li>
         </ul>
       </div>
