Traducción a euskera parte 1

--- a/eus/index.html
+++ b/eus/index.html
@@ -46,16 +46,16 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">Sobre mí</a>
+            <a class="nav-link js-scroll" href="#about">Niri buruz</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Experiencia</a>
+            <a class="nav-link js-scroll" href="#work">Esperientzia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#education">Educación</a>
+            <a class="nav-link js-scroll" href="#education">Prestakuntza</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact">Contacto</a>
+            <a class="nav-link js-scroll" href="#contact">Kontaktua</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll active" href="https://inakimendez.com">ES / <b>EUS</b></a>
@@ -73,8 +73,8 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Soy Iñaki Méndez</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Informático en Donostia,Administrador de Redes,Administrador de Sistemas,Administrador de Wordpress</span><strong class="text-slider"></strong></p>
-          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#about" role="button">Sobre mí</a><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#contact" role="button">Contacto</a></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Informatikaria Donostian,Sare Administratzailea,Sistema Administratzailea,Wordpress Administratzailea</span><strong class="text-slider"></strong></p>
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#about" role="button">Niri buruz</a><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#contact" role="button">Contacto</a></p>
         </div>
       </div>
     </div>
@@ -106,20 +106,20 @@
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Habilidades</p>
-                    <span>Mantenimiento informático</span> <span class="pull-right"></span>
+                    <p class="title-s">Gaitasunak</p>
+                    <span>Informatika mantenua</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Atención al cliente</span> <span class="pull-right"></span>
+                    <span>Bezero arreta</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Administración de sistemas</span> <span class="pull-right"></span>
+                    <span>Sistemak administratzea</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Administracion de Wordpress</span> <span class="pull-right"></span>
+                    <span>Wordpress administratzea</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -133,16 +133,15 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
+                      Informatika teknikaria Donostian, lehiakorra, langilea, sortzailea, nire trebetasunak egunero hobetzeko ekimenez eta gogoz.
                     </p>
                     <p class="lead">
-                      Actualmente trabajo como Administrador de Sistemas en Savvy Data Systems, virtualizando sistemas, gestionando copias de seguridad, arrancando, reparando y manteniendo equipos, etc.
+                      Gaur egun, Savvy Data Systems-eko sistema administratzaile gisa egiten dut lan, sistemak birtualizatzen, segurtasun-kopiak kudeatzen, ekipoak abiarazten, konpontzen, mantentzen, etab.
                     </p>
                     <p class="lead">
-                      Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
-                      de calidad y seguridad correspondientes.  
-					  <p class="lead">
-                      ¡En mi tiempo libre escribo guias y tutoriales de Linux, seguridad, redes y otros temas en Linuxbasico!
+                      Sistema informatikoak konfiguratu, kudeatu eta mantentzeko gaitasuna dut, haien funtzionaltasuna mantenduz, baliabideen osotasuna eta sistemen zerbitzua bermatuz, eskatutako kalitatearekin eta indarrean dagoen araudia betez. 
+					          <p class="lead">
+                      Nire aisialdian Linux sistema eragileari buruzko gidak eta tutorialak, segurtasuna, sareak, eta beste gai batzuei buruz idazten dut Linuxbasico web orrian!
                     </p>
                     </p>
                   </div>
@@ -162,7 +161,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Experiencia 
+                Esperientzia 
               </h3>
               
               <div class="line-mf"></div>
@@ -180,9 +179,9 @@
                   <div class="work-content">
                     <div class="row">
                       <div class="col-sm-8">
-                        <h2 class="w-title">Técnico de sistemas</h2>
+                        <h2 class="w-title">Sistema teknikaria</h2>
                         <div class="w-more">
-                          <span class="w-ctegory">Savvy Data Systems</span> / <span class="w-date">Jun. 2022 - Actualmente</span> / <span class="w-location">Donostia</span>
+                          <span class="w-ctegory">Savvy Data Systems</span> / <span class="w-date">Jun. 2022 - Gaur egun</span> / <span class="w-location">Donostia</span>
                         </div>
                       </div>
                       <div class="col-sm-4">
@@ -204,7 +203,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico de sistemas</h2>
+                      <h2 class="w-title">Sistema teknikaria</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Megabi Soluciones</span> / <span class="w-date">Dic. 2020 - Jun. 2022</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -228,7 +227,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Promotor de ventas</h2>
+                      <h2 class="w-title">Salmenta sustatzailea</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Samsung España</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -252,7 +251,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico de sistemas</h2>
+                      <h2 class="w-title">Sistema teknikaria</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Grupo Sermicro</span> / <span class="w-date">Jul. 2020 - Ago. 2020</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -276,7 +275,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico de sistemas</h2>
+                      <h2 class="w-title">Sistema teknikaria</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Xenon Computer</span> / <span class="w-date">Feb. 2020 - Mar. 2020</span> / <span class="w-location">Astigarraga</span>
                       </div>
@@ -300,7 +299,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Vendedor Gama Blanca</h2>
+                      <h2 class="w-title">Etxetresna elektrikoen saltzailea</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Jun. 2018 - Ene. 2019 </span> / <span class="w-location">Donostia</span>
                       </div>
@@ -324,7 +323,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico Informático</h2>
+                      <h2 class="w-title">Informatika teknikaria</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Kamilnotebook</span> / <span class="w-date">Mar. 2018 - May. 2018</span> / <span class="w-location">Wroclaw</span>
                       </div>
@@ -348,7 +347,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico Informático</h2>
+                      <h2 class="w-title">Informatika teknikaria</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -372,7 +371,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Vendedor Informática</h2>
+                      <h2 class="w-title">Informatika Saltzailea</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -399,7 +398,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                 EDUCACIÓN
+                Prestakuntza
               </h3>
               
               <div class="line-mf"></div>
