--- a/eus/index.html
+++ b/eus/index.html
@@ -72,9 +72,9 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">Soy Iñaki Méndez</h1>
+          <h1 class="intro-title mb-4">Iñaki Méndez naiz</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Informatikaria Donostian,Sare Administratzailea,Sistema Administratzailea,Wordpress Administratzailea</span><strong class="text-slider"></strong></p>
-          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#about" role="button">Niri buruz</a><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#contact" role="button">Contacto</a></p>
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#about" role="button">Niri buruz</a><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#contact" role="button">Kontaktua</a></p>
         </div>
       </div>
     </div>
