--- a/eus/index.html
+++ b/eus/index.html
@@ -98,10 +98,10 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Nombre: </span> <span>Iñaki Méndez</span></p>
-                        <p><span class="title-s">Título: </span> <span>Técnico Informático</span></p>
-                        <p><span class="title-s">Email: </span> <span>inaki@inaki.eus</span></p>
-                        <p><span class="title-s">Teléfono: </span> <span>(+34) 688688760</span></p>
+                        <p><span class="title-s">Izena: </span> <span>Iñaki Méndez</span></p>
+                        <p><span class="title-s">Titulua: </span> <span>Informatika teknikaria</span></p>
+                        <p><span class="title-s">Posta: </span> <span>inaki@inaki.eus</span></p>
+                        <p><span class="title-s">Telefonoa: </span> <span>(+34) 688688760</span></p>
                       </div>
                     </div>
                   </div>
@@ -129,7 +129,7 @@
                   <div class="about-me pt-4 pt-md-0">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Sobre mí
+                        Niri buruz
                       </h5>
                     </div>
                     <p class="lead">
