actualización de contenido en euskera

--- a/eus/index.html
+++ b/eus/index.html
@@ -229,7 +229,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Salmenta sustatzailea</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Samsung España</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span> / <span class="w-location">Donostia</span>
+                        <span class="w-ctegory">Samsung</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -414,7 +414,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Especialización en Ciberseguridad en Entornos de las TI</h2>
+                      <h2 class="w-title">IKT Inguruneetan Zibersegurtasuneko Espezializazioa</h2>
                       <div class="w-more">
                         <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2021 - 2022</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -437,7 +437,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico Superior en Administración de Sistemas Informáticos en Red</h2>
+                      <h2 class="w-title">Sareko informatika sistemen administrazioko goi mailako teknikaria</h2>
                       <div class="w-more">
                         <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2018 - 2020</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -460,7 +460,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico en Sistemas Microinformáticos y Redes</h2>
+                      <h2 class="w-title">Mikroinformatika sistemetako eta sareetako teknikaria</h2>
                       <div class="w-more">
                         <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2016 - 2018</span> / <span class="w-location">Donostia</span>
                       </div>
@@ -483,7 +483,7 @@
           <div class="work-content">
             <div class="row">
               <div class="col-sm-8">
-                <h2 class="w-title">Posicionamiento en buscadores SEO y SEM</h2>
+                <h2 class="w-title">SEO eta SEM posizionamendua bilatzaileetan</h2>
                 <div class="w-more">
                   <span class="w-ctegory">Nazaret Zentroa</span> / <span class="w-date">2022</span> / <span class="w-location">Donostia</span>
                 </div>
@@ -514,7 +514,7 @@
             <div class="col-sm-12">
               <div class="title-box text-center">
                 <h3 class="title-a">
-                  CERTIFICADOS
+                  ZIURTAGIRIAK
                 </h3>
               
                 <div class="line-mf"></div>
@@ -574,7 +574,7 @@
                   <span class="ico-circle"><i class="ion-earth"></i></span>
                 </div>
                 <div class="service-content">
-                  <h2 class="s-title">Internet Avanzado</h2>
+                  <h2 class="s-title">Internet Aurreratua</h2>
                   <p class="s-description text-center">
                     Tecnalia Research & Innovation
                   </p>
@@ -591,7 +591,7 @@
                 <div class="service-content">
                   <h2 class="s-title">Samsung Pro 7</h2>
                   <p class="s-description text-center">
-                    Samsung España
+                    Samsung
                   </p>
                 </div>
               </a>
@@ -632,7 +632,7 @@
                       <div class="col-sm-12 ">
                         <div class="title-box text-center">
                           <h3 class="title-a">
-                            CONTACTO
+                            KONTAKTUA
                           </h3>
                           <div class="line-mf"></div>
                           
