--- a/eus/index.html
+++ b/eus/index.html
@@ -414,7 +414,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Zibersegurtasuna informazio-teknologien inguruneetan espezializazioa</h2>
+                      <h2 class="w-title">Zibersegurtasuna informazio teknologien inguruneetan espezializazioa</h2>
                       <div class="w-more">
                         <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2021 - 2022</span> / <span class="w-location">Donostia</span>
                       </div>
