--- a/eus/index.html
+++ b/eus/index.html
@@ -299,7 +299,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Etxetresna elektrikoen saltzailea</h2>
+                      <h2 class="w-title">Etxetresna saltzailea</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Jun. 2018 - Ene. 2019 </span> / <span class="w-location">Donostia</span>
                       </div>
