--- a/eus/index.html
+++ b/eus/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Iñaki Méndez | Informatika teknikaria Donostian</title>
-  <meta name="description" content="Soy Iñaki Méndez técnico informático de Donostia, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress, etc."/>
+  <meta name="description" content="Iñaki Méndez naiz, Informatika teknikaria Donostian. Sare Administratzailea, Sistema Administratzailea, Wordpress Administratzailea etab."/>
   <meta name="keywords" content="iñaki mendez, tecnico informatico donostia, iñaki, mendez">
 
   <!-- Favicons -->
@@ -24,8 +24,8 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <meta property="og:title" content="Iñaki Méndez | Técnico Informático	">
-  <meta property="og:description" content="Página web personal.">
+  <meta property="og:title" content="Iñaki Méndez | Informatika teknikaria Donostian">
+  <meta property="og:description" content="Web orri pertsonala">
   <meta property="og:image" content="https://inakimendez.com/assets/img/link.jpg">
   <meta property="og:url" content="https://inakimendez.com">
   <meta name="twitter:card" content="summary_large_image">
@@ -174,7 +174,7 @@
               <div class="work-box">
                 <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                   <div class="work-img">
-                    <img src="assets/img/work-09.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/savvy_data_systems.jpg" alt="" class="img-fluid">
                   </div>
                   <div class="work-content">
                     <div class="row">
@@ -198,7 +198,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-08.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/megabi_soluciones.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -222,7 +222,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-06.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/samsung_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -246,7 +246,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-07.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/sermicro_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -270,7 +270,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-05.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/xenon_computer.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -294,7 +294,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-04.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/mediamarkt_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -318,7 +318,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-03.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/kamilnotebook.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -342,7 +342,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-02.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/mediamarkt_service.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -366,7 +366,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-01.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/mediamarkt_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -641,7 +641,7 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href="tel:688688760" target="_blank"><span class="ico-circle"><i class="ion-android-call"></i></span></a></li>
+                        <li><a href="tel:+34688688760" target="_blank"><span class="ico-circle"><i class="ion-android-call"></i></span></a></li>
                         <li><a href="mailto:inaki@inaki.eus" target="_blank"><span class="ico-circle"><i class="ion-email"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/inakimendez/" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                       </ul>
