--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Iñaki Méndez | Técnico Informático en Donostia</title>
-  <meta name="description" content="Soy Iñaki Méndez técnico informático de Donostia, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress, etc."/>
+  <meta name="description" content="Soy Iñaki Méndez, técnico informático de Donostia, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress, etc."/>
   <meta name="keywords" content="iñaki mendez, tecnico informatico donostia, iñaki, mendez">
 
   <!-- Favicons -->
@@ -175,7 +175,7 @@
               <div class="work-box">
                 <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                   <div class="work-img">
-                    <img src="assets/img/work-09.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/savvy_data_systems.jpg" alt="" class="img-fluid">
                   </div>
                   <div class="work-content">
                     <div class="row">
@@ -199,7 +199,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-08.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/megabi_soluciones.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -223,7 +223,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-06.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/samsung_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -247,7 +247,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-07.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/sermicro_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -271,7 +271,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-05.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/xenon_computer.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -295,7 +295,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-04.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/mediamarkt_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -319,7 +319,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-03.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/kamilnotebook.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -343,7 +343,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-02.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/mediamarkt_service.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -367,7 +367,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-01.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/mediamarkt_donostia.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -642,7 +642,7 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href="tel:688688760" target="_blank"><span class="ico-circle"><i class="ion-android-call"></i></span></a></li>
+                        <li><a href="tel:+34688688760" target="_blank"><span class="ico-circle"><i class="ion-android-call"></i></span></a></li>
                         <li><a href="mailto:inaki@inaki.eus" target="_blank"><span class="ico-circle"><i class="ion-email"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/inakimendez/" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                       </ul>
