Cambiar concepto de educación
Cambiar de concepto de educación a formación

--- a/eus/index.html
+++ b/eus/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link js-scroll" href="#work">Esperientzia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#education">Hezkuntza</a>
+            <a class="nav-link js-scroll" href="#education">Formakuntza</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Kontaktua</a>
@@ -397,7 +397,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Hezkuntza
+                Formakuntza
               </h3>
               
               <div class="line-mf"></div>
