--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link js-scroll" href="#work">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#education">Educación</a>
+            <a class="nav-link js-scroll" href="#education">Formación</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contacto</a>
@@ -398,7 +398,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                 EDUCACIÓN
+                 FORMACIÓN
               </h3>
               
               <div class="line-mf"></div>
