actualización de mi descripción
Pequeña actualización de mi descripción.

--- a/eus/index.html
+++ b/eus/index.html
@@ -132,10 +132,10 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Informatika teknikaria Donostian, lehiakorra, langilea, sortzailea, nire trebetasunak egunero hobetzeko ekimenez eta gogoz.
+                      Informatika teknikaria Donostian, lehiakorra, langilea, sortzailea, ekimenarekin eta nire onena emateko gogoz.
                     </p>
                     <p class="lead">
-                      Gaur egun, Savvy Data Systems-eko sistema administratzaile gisa egiten dut lan, sistemak birtualizatzen, segurtasun-kopiak kudeatzen, ekipoak abiarazten, konpontzen, mantentzen, etab.
+                      Gaur egun, sistema administratzaile gisa egiten dut lan, makinak birtualizatzen, segurtasun-kopiak kudeatzen, ekipoak abiarazten, konpontzen, mantentzen, etab.
                     </p>
                     <p class="lead">
                       Sistema informatikoak konfiguratu, kudeatu eta mantentzeko gaitasuna dut, haien funtzionaltasuna mantenduz, baliabideen osotasuna eta sistemen zerbitzua bermatuz, eskatutako kalitatearekin eta indarrean dagoen araudia betez. 
