--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
+                      Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de dar lo mejor de mí mismo.
                     </p>
                     <p class="lead">
-                      Actualmente trabajo como Administrador de Sistemas en Savvy Data Systems, virtualizando sistemas, gestionando copias de seguridad, arrancando, reparando y manteniendo equipos, etc.
+                      Actualmente trabajo como Administrador de Sistemas, virtualizando máquinas, gestionando copias de seguridad, arrancando, reparando y manteniendo equipos, etc.
                     </p>
                     <p class="lead">
                       Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
