--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de dar lo mejor de mí mismo.
+                      Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de dar lo mejor de mí.
                     </p>
                     <p class="lead">
                       Actualmente trabajo como Administrador de Sistemas, virtualizando máquinas, gestionando copias de seguridad, arrancando, reparando y manteniendo equipos, etc.
