enlaces de contacto
enlaces de contacto

--- a/eus/index.html
+++ b/eus/index.html
@@ -99,8 +99,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Izena: </span> <span>Iñaki Méndez</span></p>
                         <p><span class="title-s">Titulua: </span> <span>Informatika teknikaria</span></p>
-                        <p><span class="title-s">Posta: </span> <span>inaki@inaki.eus</span></p>
-                        <p><span class="title-s">Telefonoa: </span> <span>(+34) 688688760</span></p>
+                        <p><span class="title-s">Email: </span> <a style="color: #007bff;" href="mailto:inaki@inaki.eus">inaki@inaki.eus</a></p>
+                        <p><span class="title-s">Teléfono: </span> <a style="color: #007bff;" href="tel:+34688688760">688688760</a></span></p>
                       </div>
                     </div>
                   </div>
@@ -140,7 +140,7 @@
                     <p class="lead">
                       Sistema informatikoak konfiguratu, kudeatu eta mantentzeko gaitasuna dut, haien funtzionaltasuna mantenduz, baliabideen osotasuna eta sistemen zerbitzua bermatuz, eskatutako kalitatearekin eta indarrean dagoen araudia betez. 
 					          <p class="lead">
-                      Nire aisialdian Linux sistema eragileari buruzko gidak eta tutorialak, segurtasuna, sareak, eta beste gai batzuei buruz idazten dut Linuxbasico web orrian!
+                      Nire aisialdian Linux sistema eragileari buruzko gidak eta tutorialak, segurtasuna, sareak, eta beste gai batzuei buruz idazten dut <a style="color: #007bff;" href="https://linuxbasico.com"> Linuxbasico</a> web orrian!
                     </p>
                     </p>
                   </div>
