--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Nombre: </span> <span>Iñaki Méndez</span></p>
                         <p><span class="title-s">Título: </span> <span>Técnico Informático</span></p>
-                        <p><span class="title-s">Email: </span> <span>inaki@inaki.eus</span></p>
-                        <p><span class="title-s">Teléfono: </span> <span>(+34) 688688760</span></p>
+                        <p><span class="title-s">Email: </span> <a style="color: #007bff;" href="mailto:inaki@inaki.eus">inaki@inaki.eus</a></p>
+                        <p><span class="title-s">Teléfono: </span> <a style="color: #007bff;" href="tel:+34688688760">688688760</a></span></p>
                       </div>
                     </div>
                   </div>
@@ -141,7 +141,7 @@
                       Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
                       de calidad y seguridad correspondientes.  
 					  <p class="lead">
-                      ¡En mi tiempo libre escribo guias y tutoriales de Linux, seguridad, redes y otros temas en Linuxbasico!
+                      ¡En mi tiempo libre escribo guias y tutoriales de Linux, seguridad, redes y otros temas en <a style="color: #007bff;" href="https://linuxbasico.com"> Linuxbasico</a>!
                     </p>
                     </p>
                   </div>
