--- a/eus/index.html
+++ b/eus/index.html
@@ -55,6 +55,9 @@
             <a class="nav-link js-scroll" href="#education">Formakuntza</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="https://linuxbasico.com" target="_blank">Bloga</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Kontaktua</a>
           </li>
           <li class="nav-item">
