--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#education">Formación</a>
           </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll" href="https://linuxbasico.com" target="_blank">Blog</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contacto</a>
           </li>
