Actualización de descripción

--- a/eus/index.html
+++ b/eus/index.html
@@ -138,8 +138,7 @@
                       Informatika teknikaria Donostian, lehiakorra, langilea, sortzailea, ekimenarekin eta nire onena emateko gogoz.
                     </p>
                     <p class="lead">
-                      Gaur egun, sistema administratzaile gisa egiten dut lan, makinak birtualizatzen, segurtasun-kopiak kudeatzen, ekipoak abiarazten, konpontzen, mantentzen, etab.
-                    </p>
+                      Gaur egun, sistema administratzaile gisa lan egiten dut, zerbitzariak, datu-baseak, segurtasun-kopiak, ekipoak eta makina birtualak kudeatuz eta mantenduz.                    </p>
                     <p class="lead">
                       Sistema informatikoak konfiguratu, kudeatu eta mantentzeko gaitasuna dut, haien funtzionaltasuna mantenduz, baliabideen osotasuna eta sistemen zerbitzua bermatuz, eskatutako kalitatearekin eta indarrean dagoen araudia betez. 
 					          <p class="lead">
