--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                       Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de dar lo mejor de mí.
                     </p>
                     <p class="lead">
-                      Actualmente trabajo como Administrador de Sistemas, virtualizando máquinas, gestionando copias de seguridad, arrancando, reparando y manteniendo equipos, etc.
+                      Actualmente trabajo como Administrador de Sistemas, gestionando y manteniendo servidores, bases de datos, copias de seguridad, equipos y máquinas virtuales.
                     </p>
                     <p class="lead">
                       Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
