Actualizar datos de contacto en euskera

--- a/eus/index.html
+++ b/eus/index.html
@@ -102,8 +102,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Izena: </span> <span>Iñaki Méndez</span></p>
                         <p><span class="title-s">Titulua: </span> <span>Informatika teknikaria</span></p>
-                        <p><span class="title-s">Email: </span> <a style="color: #007bff;" href="mailto:inaki@inaki.eus">inaki@inaki.eus</a></p>
-                        <p><span class="title-s">Teléfono: </span> <a style="color: #007bff;" href="tel:+34688688760">688688760</a></span></p>
+                        <p><span class="title-s">Posta: </span> <a style="color: #007bff;" href="mailto:inaki@inaki.eus">inaki@inaki.eus</a></p>
+                        <p><span class="title-s">Telefonoa: </span> <a style="color: #007bff;" href="tel:+34688688760">688688760</a></span></p>
                       </div>
                     </div>
                   </div>
